crates/ink/tests/ui/selector_id/fail/non_literal_parameter.stderr
error: expected string or byte string literal as input: expected literal
 --> tests/ui/selector_id/fail/non_literal_parameter.rs:4:34
  |
4 | const _: u32 = ink::selector_id!(INPUT);
  |                                  ^^^^^
